# node_based

./: .gitmodules  CMakeLists.txt  vcpkg.json
App/: CMakeLists.txt  Editor.cpp  main.cpp
App/include/: Editor.h
App/src/: Editor.cpp
cmake/: loadLibraries.cmake  update_modules.cmake
cmake/utils/: GLFW.cmake  glew.cmake  imgui.cmake  imnode.cmake
